# sway-display-manager

./: .dir-locals.el  .editorconfig  .gitignore  README.md  default.nix  flake.nix  package.nix  pyproject.toml
.github/actions/python-uv-env/: action.yaml
.github/workflows/: bump-version.yaml  tag-version.yaml  test.yaml
src/swaydm/: __init__.py  code.py  command.py  config.py  datatypes.py  ipc.py  main.py  manager.py  profile.py  utils.py
tests/: conftest.py
tests/auto_false_not_auto_applied/: conftest.py  test_matching.py
tests/basic/: test_config.py  test_profile.py
tests/basic_single_match/: conftest.py  test_matching.py
tests/config_path_resolution/: conftest.py  test_matching.py
tests/connector_name_changed/: conftest.py  test_matching.py
tests/declaration_order_pairing/: conftest.py  test_matching.py
tests/duplicate_identifier_distinguished_by_mode/: conftest.py  test_matching.py
tests/duplicate_identifier_same_mode_fallback/: conftest.py  test_matching.py
tests/hotplug_event_triggers_rematch/: conftest.py  test_matching.py
tests/manual_switch_client_to_daemon/: conftest.py  test_matching.py
tests/multiple_profiles_one_matches/: conftest.py  test_matching.py
tests/no_matching_output_for_display/: conftest.py  test_matching.py
