[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sway-display-manager"
description = "Dynamic Sway display manager"
version = "0.0.3"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "i3ipc>=2.2.1",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pyyaml>=6.0.3",
  "setuptools>=80.10.1",
]

[project.scripts]
swaydm = "swaydm.main:main"

[tool.ruff]
target-version = "py313"
line-length = 80

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
docstring-code-format = false

[tool.ty.rules]
unresolved-attribute = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
